# python_planet_x

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
app/: apps.py  models.py
app/Exceptions/: board_exception.py
app/http/: controller.py
app/migrations/: 0001_initial.py  0002_rule.py  0003_theory.py
app/services/: board_service.py  game_service.py  rule_service.py  sector_service.py
app/templates/: game.html  home.html  icon.html
app/templatetags/: template_filters.py
app/tests/: board_service_test.py  board_test.py  generation_service_test.py  models_test.py  rule_service_test.py  rules_test.py  sectors_test.py  view_board_test.py
app/valueObjects/: board.py  luminary.py  rules.py  sectors.py  view_board.py
board/models/: board.py  models.py
board/services/: board_service.py
board/tests/: board_service_test.py  board_test.py
board/valueObjects/: board.py  luminary.py
planet_x/: asgi.py  settings.py  urls.py  wsgi.py
theme/static_src/: package-lock.json
theme/templates/: base.html
