[tool.poetry]
name = "planet-x"
version = "0.1.0"
description = "Planet X single player game jin python django"
authors = ["sofia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
