[tool.poetry]
name = "planet-x"
version = "0.1.0"
description = "Planet X single player game jin python django"
authors = ["sofia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
mypy = "^1.13.0"

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
